add notes re: permgen issues